assets/css/main.css
/*
 * Author: Carlos Alvarez
 * URL: http://alvarez.is
 *
 * Project Name: Onassis - Free Bootstrap 3 Theme
 * Version: 1.0
 * URL: http://blacktie.co
 */

body {
	background-color: #f2f2f2;
	font-family: "Lato";
	font-weight: 300;
	font-size: 16px;
	color: #555;

	-webkit-font-smoothing: antialiased;
	-webkit-overflow-scrolling: touch;
}

/* Titles */
h1, h2, h3, h4, h5, h6 {
	font-family: "Raleway";
	font-weight: 300;
	color: #333;
}


/* Paragraph & Typographic */
p {
	line-height: 28px;
	margin-bottom: 25px;
}

.centered {
	text-align: center;
}

/* Links */
a {
	color: #f85c37;
	word-wrap: break-word;

	-webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
	-moz-transition: color 0.1s ease-in, background 0.1s ease-in;
	-ms-transition: color 0.1s ease-in, background 0.1s ease-in;
	-o-transition: color 0.1s ease-in, background 0.1s ease-in;
	transition: color 0.1s ease-in, background 0.1s ease-in;
}

a:hover,
a:focus {
	color: #7b7b7b;
	text-decoration: none;
	outline: 0;
}

a:before,
a:after {
	-webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
	-moz-transition: color 0.1s ease-in, background 0.1s ease-in;
	-ms-transition: color 0.1s ease-in, background 0.1s ease-in;
	-o-transition: color 0.1s ease-in, background 0.1s ease-in;
	transition: color 0.1s ease-in, background 0.1s ease-in;
}

hr {
	display: block;
	height: 1px;
	border: 0;
	border-top: 1px solid #ccc;
	margin: 1em 0;
	padding: 0;
}


/* ==========================================================================
   Wrap Sections
   ========================================================================== */

#headerwrap {
	background: url(../img/header-bg.jpg) no-repeat center top;
	margin-top: -10px;
	padding-top:20px;
	text-align:center;
	background-attachment: relative;
	background-position: center center;
	min-height: 700px;
	width: 100%;
	
	-webkit-background-size: 100%;
	-moz-background-size: 100%;
	-o-background-size: 100%;
	background-size: 100%;

	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

#headerwrap h1 {
	font-family: "chunk";
	margin-top: 100px;
	color: #669900;
	text-shadow: 4px 4px 4px black;
}

#headerwrap h2 {
	font-family: "chunk";
	margin-top: 20px;
	color: #3399CC;
	font-weight: 100;
	text-shadow: 0.01em 0.01em 0 #4A4F6A, 0.02em 0.02em 0 #4A4F6A, 0.03em 0.03em 0 #4A4F6A, 0.04em 0.04em 0 #4A4F6A, 0.05em 0.05em 0 #4A4F6A, 0.06em 0.06em 0 #4A4F6A, 0.07em 0.07em 0 #4A4F6A, 0.08em 0.08em 0 #4A4F6A, 0.09em 0.09em 0 #4A4F6A, 0.1em 0.1em 0 #4A4F6A;
}

/* Portfolio Wrap */
#portfoliowrap {
	background: url(../img/portfolio-bg.jpg) no-repeat center top;
	margin-top: 0px;
	padding-top:40px;
	text-align:center;
	background-attachment: relative;
	background-position: center center;
	min-height: 500px;
	width: 100%;
	
	-webkit-background-size: 100%;
	-moz-background-size: 100%;
	-o-background-size: 100%;
	background-size: 100%;

	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}


#portfoliowrap h3 {
	color: #ffffff;
}

/* White Wrap */

#w {
	background: #ffffff;
	padding-top: 35px;
	padding-bottom: 35px;
	text-align: center;
}

#w h3 {
	font-weight: 700;
	color: #7b7b7b;
	letter-spacing: 1px;
}

#w bold {
	color: #2f2f2f;
}


/* Grey Wrap */

#g {
	background: #f2f2f2;
	padding-top: 35px;
	padding-bottom: 35px;
	text-align: center;
}

/* Dark Grey Wrap */
#dg {
	background: #e0e0e0;
	padding-top: 70px;
	padding-bottom: 70px;
	text-align: center;
}

/* Footer Wrap */

#f {
	background: #2f2f2f;
	padding-top: 70px;
	padding-bottom: 70px;
	text-align: center;
	color: white;
}

#f h3 {
	color: white;
}

#f h4 {
	color: white;
}

#f i {
	font-size: 26px;
	color: white;
	padding-left: 10px;
	padding-right: 10px;
}

/* Copyright Wrap */

#c {
	background: #222222;
	padding-top: 15px;
	text-align: right;
}

#c p {
	color: white
}


/* item Wrap */

#itemwrap {
	background: url(../img/item-bg.jpg) no-repeat center top;
	margin-top: 0px;
	padding-top:70px;
	text-align:center;
	background-attachment: relative;
	background-position: center center;
	min-height: 500px;
	width: 100%;
	
	-webkit-background-size: 100%;
	-moz-background-size: 100%;
	-o-background-size: 100%;
	background-size: 100%;

	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

#itemwrap h1 {
	margin-top: 40px;
	color: white;
	font-size: 100px;
	font-weight: 700;
	letter-spacing: 3px;
}

#itemwrap h2 {
	color: white;
	font-size: 50px;
	font-weight: 100;
	letter-spacing: 2px;
}


.desc {
	text-align: left;
}

.desc-b {
	border-left: 4px solid #bababa;
}

.desc-a i {
	color: #555;
	padding-right: 8px;
}

.desc-b i {
	color: #555;
	padding-right: 8px;
}



/* MENU CONF*/

.menu {
	position: fixed;
	right: -200px;
	width: 260px;
	height: 100%;
	top: 0;
	z-index: 10;
	text-align: left;
}

.menu.menu-open {
	right: 0px;
}

.menu-wrap {
	position: absolute;
	top: 0;
	left: 60px;
	background: #1a1a1a;
	width: 200px;
	height: 100%;
}

.menu h1.logo a {
	font-family: 'Raleway', Helvetica, Arial, sans-serif;
	font-size: 16px;
	font-weight: 800;
	letter-spacing: 0.15em;
	line-height: 40px;
	text-transform: uppercase;
	color: #ffffff;
	margin-top: 20px;
}

.menu h1.logo a:hover {
	color: #f85c37;
}

.menu img.logo {
	margin: 20px 0;
	max-width: 160px;
}

.menu a {
	margin-left: 20px;
	color: #808080;
	display: block;
	font-size: 12px;
	font-weight: 700;
	line-height: 40px;
	letter-spacing: 0.1em;
	text-transform: uppercase;
}

.menu a:hover {
	color: #ffffff;
}

.menu a:active {
	color: #ffffff;
}

.menu a > i {
	float: left;
	display: inline-block;
	vertical-align: middle; 
	text-align: left;
	width: 25px;
	font-size: 14px;
	line-height: 40px;
	margin: 25px 2px;
}

.menu-close {
	cursor: pointer;
	display: block;
	position: absolute;
	font-size: 14px;
	color: #808080;
	width: 40px;
	height: 40px;
	line-height: 40px;
	top: 20px;
	right: 5px;
	-webkit-transition: all .1s ease-in-out;
	   -moz-transition: all .1s ease-in-out;
		-ms-transition: all .1s ease-in-out;
		 -o-transition: all .1s ease-in-out;
			transition: all .1s ease-in-out;
}

.menu-close:hover {
	color: #ffffff;
	-webkit-transition: all .1s ease-in-out;
	   -moz-transition: all .1s ease-in-out;
		-ms-transition: all .1s ease-in-out;
		 -o-transition: all .1s ease-in-out;
			transition: all .1s ease-in-out;
}

/* Push the body after clicking the menu button */
.body-push {
	overflow-x: hidden;
	position: relative;
	left: 0;
}

.body-push-toright {
	left: 200px;
}

.body-push-toleft {
	left: -200px;
}

.menu,
.body-push {
	-webkit-transition: all .3s ease;
	   -moz-transition: all .3s ease;
		-ms-transition: all .3s ease;
		 -o-transition: all .3s ease;
			transition: all .3s ease;
}

#menuToggle {
	position: absolute;
	top: 20px;
	left: 0;
	z-index: 11;
	display: block;
	text-align: center;
	font-size: 14px;
	color: #ffffff;
	width: 40px;
	height: 40px;
	line-height: 40px;
	cursor: pointer;
	background: rgba(102,183,0,0.65);
	-webkit-transition: all .1s ease-in-out;
	   -moz-transition: all .1s ease-in-out;
		-ms-transition: all .1s ease-in-out;
		 -o-transition: all .1s ease-in-out;
			transition: all .1s ease-in-out;
	border-radius:4px;
}

#menuToggle:hover {
	color: #ffffff;
	background: rgba(102,183,0,0.85);
	-webkit-transition: all .1s ease-in-out;
	   -moz-transition: all .1s ease-in-out;
		-ms-transition: all .1s ease-in-out;
		 -o-transition: all .1s ease-in-out;
			transition: all .1s ease-in-out;
}


/* BUTTON CONF */

.btn-theme {
	color: #fff;
	background-color: #1abc9c;
	padding-left: 40px;
	padding-right: 40px;
	padding-bottom: 10px;
	padding-top: 10px;
	font-weight: 700;
	border-radius: 3px;
}

.btn-theme:hover {
	cursor: pointer;
	color: white;
	background-color: #16a085;
	
}

/* TEAM CONF */

.team {
	padding-top: 20px;
}

.team:hover {
	background: white;
}

.team a {
	padding-right: 10px;
	padding-left: 10px;
}



/* MAP */
#oSC14map { height: 500px; }
.leaflet-shadow-pane {display: none;}

/* Location */
.venue_info {color:white; font-weight:bold;}

